hydromel/tests/errors/sem-non-static-expr-as-if-cond.mel
#lang hydromel

# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

component C
    port x : in bit
    port y : out unsigned(32)
    # ERROR: Non-static expression cannot be used as condition in if statement
    if x then
        y = 1
    end
end
